text overlap issue on offer profile page now fixed and testing.md doc updated

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -185,29 +185,34 @@ div .col .social-media-container {
   height: 17vh;
 }
 
+.price .card-panel {
+  height: 100%;
+}
+
 .offer_description {
   min-height: 17vh;
 }
 
 /* star widget codingnepalweb */
-.star-widget label{
+.star-widget label {
     font-size: 250%;
     color: #444;
-    padding: 10px;
+    padding-right: 2%;
+    padding-top: 2%;
     transition: all 0.2s ease;
     float: right;
   }
 
 input:not(:checked) ~ label:hover,
-input:not(:checked) ~ label:hover ~ label{
+input:not(:checked) ~ label:hover ~ label {
   color: #fd4;
 }
 
-input:checked ~ label{
+input:checked ~ label {
     color: #fd4;
   }
 
-input#rate-5:checked ~ label{
+input#rate-5:checked ~ label {
     color: #fe7;
   }
 
